// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error handling Snyk fix returns error when called with unsupported type 1`] = `
{
  "exceptions": {
    "npm": {
      "originals": [
        {
          "options": {
            "command": "python3",
          },
          "scanResult": {
            "facts": [
              {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": {
              "targetFile": "package.json",
              "type": "npm",
            },
          },
          "testResult": {
            "depGraphData": "",
            "issues": [
              {
                "fixInfo": {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": {
              "vuln-id": {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": {
              "ignore": {},
              "patch": {},
              "pin": {
                "django@1.6.1": {
                  "isTransitive": false,
                  "upgradeTo": "django@2.0.1",
                  "vulns": [
                    "vuln-id",
                  ],
                },
              },
              "unresolved": [],
              "upgrade": {},
            },
          },
          "workspace": {
            "path": ".",
            "readFile": [Function],
            "writeFile": [Function],
          },
        },
      ],
      "userMessage": "npm is not supported.",
    },
  },
  "fixSummary": "
 ✖ No successful fixes


Unresolved items:

  package.json
  ✖ npm is not supported.

Summary:

  1 items were not fixed

  1 issues: 1 High
  1 issues are fixable
  

Tip: Re-run in debug mode to see more information: DEBUG=*snyk* <COMMAND>. If the issue persists contact support@snyk.io",
  "meta": {
    "failed": 1,
    "fixableIssues": 1,
    "fixed": 0,
    "fixedIssues": 0,
    "totalIssues": 1,
  },
  "results": {},
}
`;

exports[`Error handling Snyk fix returns error when manifest can not be parsed 1`] = `
{
  "exceptions": {},
  "fixSummary": "
Successful fixes:

  requirements.txt
  ✔ Pinned django from 1.6.1 to 2.0.1

Summary:

  1 items were successfully fixed

  1 issues: 1 High
  1 issues are fixable
  1 issues were successfully fixed
",
  "meta": {
    "failed": 0,
    "fixableIssues": 1,
    "fixed": 1,
    "fixedIssues": 1,
    "totalIssues": 1,
  },
  "results": {
    "python": {
      "failed": [],
      "skipped": [],
      "succeeded": [
        {
          "changes": [
            {
              "from": "django@1.6.1",
              "issueIds": [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Pinned django from 1.6.1 to 2.0.1",
            },
          ],
          "original": {
            "options": {
              "command": "python3",
            },
            "scanResult": {
              "facts": [
                {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": {
                "targetFile": "requirements.txt",
                "type": "pip",
              },
            },
            "testResult": {
              "depGraphData": "",
              "issues": [
                {
                  "fixInfo": {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": {
                "vuln-id": {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": {
                "ignore": {},
                "patch": {},
                "pin": {
                  "django@1.6.1": {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": [],
                "upgrade": {},
              },
            },
            "workspace": {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Snyk fix Snyk fix returns results for supported & unsupported type 1`] = `
{
  "exceptions": {},
  "fixSummary": "
Successful fixes:

  Pipfile
  ✔ Upgraded django from 1.6.1 to 2.0.1

  requirements.txt
  ✔ Upgraded django from 1.6.1 to 2.0.1

Summary:

  Command run in dry run mode. Fixes are not applied.
  2 items were successfully fixed

  2 issues: 2 High
  2 issues are fixable
  2 issues were successfully fixed
",
  "meta": {
    "failed": 0,
    "fixableIssues": 2,
    "fixed": 2,
    "fixedIssues": 2,
    "totalIssues": 2,
  },
  "results": {
    "python": {
      "failed": [],
      "skipped": [],
      "succeeded": [
        {
          "changes": [
            {
              "from": "django@1.6.1",
              "issueIds": [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
            },
          ],
          "original": {
            "options": {
              "command": "python3",
            },
            "scanResult": {
              "facts": [
                {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": {
                "targetFile": "Pipfile",
                "type": "pip",
              },
            },
            "testResult": {
              "depGraphData": "",
              "issues": [
                {
                  "fixInfo": {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": {
                "vuln-id": {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": {
                "ignore": {},
                "patch": {},
                "pin": {
                  "django@1.6.1": {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": [],
                "upgrade": {},
              },
            },
            "workspace": {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
        {
          "changes": [
            {
              "from": "django@1.6.1",
              "issueIds": [
                "vuln-id",
              ],
              "success": true,
              "to": "django@2.0.1",
              "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
            },
          ],
          "original": {
            "options": {
              "command": "python3",
            },
            "scanResult": {
              "facts": [
                {
                  "data": "not-implemented",
                  "type": "not-implemented",
                },
              ],
              "identity": {
                "targetFile": "requirements.txt",
                "type": "pip",
              },
            },
            "testResult": {
              "depGraphData": "",
              "issues": [
                {
                  "fixInfo": {},
                  "issueId": "VULN_ID_1",
                  "pkgName": "package@version",
                },
              ],
              "issuesData": {
                "vuln-id": {
                  "id": "VULN_ID_1",
                  "severity": "high",
                  "title": "Fake vuln",
                },
              },
              "remediation": {
                "ignore": {},
                "patch": {},
                "pin": {
                  "django@1.6.1": {
                    "isTransitive": false,
                    "upgradeTo": "django@2.0.1",
                    "vulns": [
                      "vuln-id",
                    ],
                  },
                },
                "unresolved": [],
                "upgrade": {},
              },
            },
            "workspace": {
              "path": ".",
              "readFile": [Function],
              "writeFile": [Function],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Snyk fix Snyk fix returns results for supported type 1`] = `{}`;

exports[`Snyk fix Snyk fix returns results for supported type 2`] = `
{
  "python": {
    "failed": [],
    "skipped": [],
    "succeeded": [
      {
        "changes": [
          {
            "from": "django@1.6.1",
            "issueIds": [
              "vuln-id",
            ],
            "success": true,
            "to": "django@2.0.1",
            "userMessage": "Upgraded django from 1.6.1 to 2.0.1",
          },
        ],
        "original": {
          "options": {
            "command": "python3",
          },
          "scanResult": {
            "facts": [
              {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": {
              "targetFile": "requirements.txt",
              "type": "pip",
            },
          },
          "testResult": {
            "depGraphData": "",
            "issues": [
              {
                "fixInfo": {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": {
              "vuln-id": {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": {
              "ignore": {},
              "patch": {},
              "pin": {
                "django@1.6.1": {
                  "isTransitive": false,
                  "upgradeTo": "django@2.0.1",
                  "vulns": [
                    "vuln-id",
                  ],
                },
              },
              "unresolved": [],
              "upgrade": {},
            },
          },
          "workspace": {
            "path": ".",
            "readFile": [Function],
            "writeFile": [MockFunction] {
              "calls": [
                [
                  "requirements.txt",
                  "django===2.0.1",
                ],
              ],
              "results": [
                {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;
